Fix budget summary z-index

--- a/src/components/budget-summary/components/budget-summary.css
+++ b/src/components/budget-summary/components/budget-summary.css
@@ -5,4 +5,5 @@
 	position: -webkit-sticky;
 	position: sticky;
 	background-color: #ffffff;
+	z-index: 100;
 }
